# fluids

./: .gitignore  .gitmodules  CMakeLists.txt  FluidSimulator.cpp  FluidSimulator.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  addInFlow.m  applyPrecon.m  cerp2.m  fluidsimulation.m  getIdx.m  lerp.m  lerp2.m  main.cpp  project.m  project2.m  rungeKutta3.m
matlab/: addInFlow.m  cerp.m  fluidsimulation.m  getIdx.m  getValues.m  lerp.m  lerp2.m  project.m  rungeKutta3.m
shaders/: fragShader.frag  vertShader.vert
